<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#D2D5D7"
    tools:context=".Alerta">

    <ImageView
        android:id="@+id/Logo2"
        android:layout_width="51dp"
        android:layout_height="37dp"
        android:layout_marginTop="2dp"
        android:contentDescription="@string/logo"
        android:src="@drawable/lumen"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/Label3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/Label1"
        android:textColor="@color/black"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.15"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/ImBFace"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginBottom="27dp"
        android:background="@drawable/face"
        android:contentDescription="@string/ImBface"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.393"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/BotGenerar"
        app:layout_constraintVertical_bias="1.0" />

    <ImageButton
        android:id="@+id/ImBinst"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginBottom="24dp"
        android:background="@drawable/instagram"
        android:contentDescription="@string/ImaBinst"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/BotGenerar"
        app:layout_constraintVertical_bias="1.0" />

    <ImageButton
        android:id="@+id/ImBtwit"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginBottom="24dp"
        android:background="@drawable/twiter"
        android:contentDescription="@string/ImaBtwit"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.628"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/BotGenerar"
        app:layout_constraintVertical_bias="1.0" />

    <View
        android:id="@+id/divider"
        android:layout_width="400dp"
        android:layout_height="3dp"
        android:layout_marginTop="40dp"
        android:background="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/Label4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/Label4"
        android:textColor="@color/black"
        android:textSize="36sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/divider" />

    <TextView
        android:id="@+id/Label5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Label5"
        android:textColor="@color/black"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Label4" />

    <View
        android:id="@+id/divider2"
        android:layout_width="300dp"
        android:layout_height="5dp"
        android:layout_marginTop="8dp"
        android:background="@color/purple_500"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Label5" />

    <TextView
        android:id="@+id/Label6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="20dp"
        android:text="@string/Label6"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="27sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/divider2" />

    <TextView
        android:id="@+id/Label7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Label7"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="26sp"
        android:textStyle="normal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Label6" />

    <Button
        android:id="@+id/BotGenerar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:background="@android:drawable/progress_horizontal"
        android:text="@string/BotGenerar"
        android:textColor="#FDD835"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Label7"
        app:layout_constraintVertical_bias="0.3" />

</androidx.constraintlayout.widget.ConstraintLayout>