<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#D2D5D7"
    android:contentDescription="@string/Imagen1"
    tools:context=".carga_datos1">

    <ImageView
        android:id="@+id/Logo3"
        android:layout_width="51dp"
        android:layout_height="37dp"
        android:layout_marginTop="2dp"
        android:contentDescription="@string/logo"
        android:src="@drawable/lumen"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/Label8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/Label1"
        android:textColor="@color/black"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.15"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/ImBFace"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginBottom="27dp"
        android:background="@drawable/face"
        android:contentDescription="@string/ImBface"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.393"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageButton
        android:id="@+id/ImBinst"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginBottom="24dp"
        android:background="@drawable/instagram"
        android:contentDescription="@string/ImaBinst"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageButton
        android:id="@+id/ImBtwit"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginBottom="24dp"
        android:background="@drawable/twiter"
        android:contentDescription="@string/ImaBtwit"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.628"
        app:layout_constraintStart_toStartOf="parent" />

    <View
        android:id="@+id/divider"
        android:layout_width="400dp"
        android:layout_height="3dp"
        android:layout_marginTop="40dp"
        android:background="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imagen1"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:contentDescription="@string/Imagen1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.01"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.089999974"
        app:srcCompat="@android:drawable/sym_def_app_icon" />

    <TextView
        android:id="@+id/Label9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Label9"
        android:textColor="@color/black"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.179"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.100000024" />


</androidx.constraintlayout.widget.ConstraintLayout>